# Pixel-dungeon-game

./: .gitignore  CMakeLists.txt  README.md
assets/entity/creature/hero/: death_animation.txt
assets/level/: level1_Door.csv  level1_Terrain.csv  level1_Trap.csv  level2_Door.csv  level2_Terrain.csv  level2_Trap.csv  level3_Door.csv  level3_Terrain.csv  level3_Trap.csv  level4_Door.csv  level4_Terrain.csv  level4_Trap.csv  level5_Door.csv  level5_Terrain.csv  level5_Trap.csv
src/: main.cpp
src/engine/: asset_manager.cpp  asset_manager.h  scene_manager.cpp  scene_manager.h
src/engine/effect/: animation.cpp  animation.h  frame_image.cpp  frame_image.h
src/scenes/: game_scene.cpp  game_scene.h  hero_select_scene.cpp  hero_select_scene.h  idle_scene.cpp  idle_scene.h  scene.h  start_scene.cpp  start_scene.h
src/ui/: inventory_panel.cpp  inventory_panel.h  log_panel.h  menu_panel.h  player_panel.cpp  player_panel.h  player_ui.h  ui.cpp  ui_manager.h
src/utils/: helper.cpp  helper.h
src/world/: world.cpp  world.h
src/world/camera/: camera.cpp  camera.h
src/world/entity/: entity.h  hero_type.h  stats.h
src/world/entity/creature/: creature.cpp  creature.h  monster.cpp  monster.h  monster_type.h  player.cpp  player.h
src/world/entity/item/: item.cpp  item.h  item_index.h  item_info.h  item_instance.h  item_type.h
src/world/level/: level.cpp  level.h  tile_rule.h
src/world/system/: action.h
src/world/system/AI/: AI_state.h  monster_ai.cpp  monster_ai.h  path_finder.cpp  path_finder.h
src/world/system/FOV/: fov_system.cpp  fov_system.h
src/world/system/inventory/: inventory_system.cpp  inventory_system.h
src/world/system/turn_system/: turn_system.cpp  turn_system.h
src/world/tile/: tile.cpp  tile.h  tile_index.cpp  tile_index.h
src/world/tile/door/: door.cpp  door.h  door_state.h
src/world/tile/terrain/: terrain.cpp  terrain.h  terrain_type.h
src/world/tile/trap/: alarm_trap.cpp  alarm_trap.h  explode_trap.cpp  explode_trap.h  spawn_trap.cpp  spawn_trap.h  spike_trap.cpp  spike_trap.h  teleport_trap.cpp  teleport_trap.h  trap.cpp  trap.h  trap_type.h
(+14 files in other folders)
